# MP3Decoder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  watchBuild.sh
src/: CMakeLists.txt  Frame.c
test/: CMakeLists.txt  FrameTest.cpp  Test.cpp
